bustaTimes/bus_app/static/css/styles.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: "Montserrat";
}

.header {
  background-color: rgb(248, 249, 250);
}

.map-container {
  height: 100vh;
}

#map {
  height: 100%;
  width: 100%;
}

#search-elements-container,
#test-routes-select-container {
  background-color: lightblue;
  display: inline-block;
  padding: 1em;
}

.display-container {
  display: block;
  padding: 1em;
}

#origin-to-destination-div {
  background-color: lightblue;
  border-radius: 25px;
  margin-top: 15px;
}

#origin-to-destination-header {
  padding: 10px;
  font-size: small;
  margin-bottom: 5px;
}

#json-starting-stops,
#json-ending-stops,
#date-selector-container {
  margin-bottom: 10px;
}

.centre-and-padding {
  padding: 0.2em;
  text-align: center;
  margin-top: 0.2em;
}

.search-by-busstop-options:hover {
  background-color: #dceaef;
}

.busstop-option {
  margin: 0em;
}

.total-matches-shown {
  background: rgb(76,105,116,0.8);
  border-radius: 25px;
  color: white;
  padding: 0.5em;
}

#my-location-btn-img {
  height: 2rem;
  width: 2.2rem;
}

#journey-details {
  font-size: 0.75rem;
  margin-top: 30px;
  margin-bottom: 20px;
}

.timeline-row {
  display: flex;
}
.step-left {
  width: 30%;
  padding-top: 20px;
  align-self: center;
}

.step-right {
  width: 70%;
  padding-left: 15px;
  align-self: center;
}

.walking::before {
  position: relative;
  content: url(../images/directions/walking.svg);
  display: block;
  width: 30px;
  height: 30px;
  left: -30px;
  top: -10px;
}

.dublin-bus::before {
  position: relative;
  content: url(../images/directions/bus.svg);
  display: block;
  width: 30px;
  height: 30px;
  left: -30px;
  top: -10px;
}

.dart::before {
  position: relative;
  content: url(../images/directions/dart.svg);
  display: block;
  width: 30px;
  height: 30px;
  left: -30px;
  top: -10px;
}

.luas::before {
  position: relative;
  content: url(../images/directions/luas.svg);
  display: block;
  width: 30px;
  height: 30px;
  left: -30px;
  top: -10px;
}

.final-step::before {
  position: relative;
  content: "x";
  color: white;
  display: block;
  width: 25px;
  height: 25px;
  left: -26px;
  padding-top: 3px;
  background-color: #94ce9a;
  border-radius: 50%;
  margin-bottom: 20px;
}

.undefined-step::before {
  position: relative;
  content: "";
  display: block;
  width: 27px;
  height: 27px;
  left: -30px;
  top: -10px;
  background-color: lightsteelblue;
  border-radius: 50%;
}

.walking {
  border-left-style: dashed;
}

.dublin-bus,
.dart,
.luas,
.undefined-step {
  border-left-style: solid;
}

.attractions-summary {
  text-align: justify;
}

.attractions-image {
  padding-bottom: 10px;
  padding-top: 10px;
}

#marker-window-realtime-content {
  text-align: center;
}

/* ERROR for Origin and Destination */
.error {
  position: relative;
  animation: shake 0.5s linear;
  animation-iteration-count: 3;
  border: 1px solid red;
  background-color: #f55b81;
  outline: none;
}

/* CAN'T GET SHAKING TO WORK! */
@keyframes shake {
  0% {
    left: -5px;
  }
  100% {
    right: -5px;
  }
}

#greeting-banner {
  font-weight: 900;
  color: #335C67;
  letter-spacing: 2px;
}

/*----------- Search menu ---------------*/
.Search-Menu-Container {
  background-color: rgb(255, 255, 255);
  /* min and max widths to manage size */
  max-width: 850px;
  min-width: 350px;
  display: flex;
  flex-direction: column;
  position: absolute;
  /* top right bottom left*/
  padding: 0 10px 0 10px;
  left: 20px;
  top: 70px;
  text-align: center;
  border-radius: 25px;
  transition: left 1s;
}

.leap-card-input,
.form-control {
  margin-bottom: 10px;
}

select,
#busstop-search {
  width: 100%;
}

/* Style the tab */
.tab {
  overflow: hidden;
  display: flex;
  justify-content: center;
}

.tab .tablinks {
  background-color: inherit;
  /* float: left; */
  border: none;
  outline: none;
  cursor: pointer;
}

/* Create an active/current tablink class */
.tab .tablinks.active {
  background-color: lightblue;
  border-radius: 100%;
}

/* Styles for hover over the menu images */
/* ------- START ------- */
.menu-container {
  position: relative;
  width: 65px;
  margin: 0px 5px 0px 5px;
}

.image {
  width: 55px;
  height: auto;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: rgb(76,105,116,0.8);
  border-radius: 100%;
}

.menu-container:hover .overlay {
  opacity: 1;
}

.menu-text {
  color: white;
  font-size: small;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}
/* ------- END ------- */

/* Submit buttons in the menu */
.btn-submit {
  border-color: lightblue;
  font-size: small;
}

.btn-submit:hover {
  color: white;
  background-color: lightblue;
}

/* Styles for mobile */
@media (max-width: 850px) {
  .map-container {
    height: 65vh;
  }

  .image {
    display: block;
    width: 50px;
  }

  .menu-container {
    width: 60px;
  }

  .app-container {
    width: 100vw;
  }

  .tab {
    max-width: 300px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }

  .Search-Menu-Container {
    background-color: white;
    /* min and max widths to manage size */
    width: 100vw;
    display: flex;
    flex-direction: column;
    left: 0px;
    padding: 0px;
    padding-top: 15px;
    top: calc(100vh - 35vh);
    text-align: center;
  }

  #menu-title,
  .menu-label {
    display: none;
  }

  .btn-submit,
  .caption {
    font-size: smaller;
  }

  .style-btns,
  .markers-switch {
    display: none;
  }
}

/* Style te tab content */
.tabcontent {
  display: none;
  padding: 6px 12px;
  border-top: none;
  text-align: center;
}

/* Style the menu on the right side */
/* ------- START ------- */
.weather-container,
.attractions,
.user-location-btn,
.news-top-bar-btn,
.night-mode {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: 100px;
  right: 20px;
  background-color: rgb(265, 265, 265, 0.85);
  border-radius: 25px;
  text-align: center;
  align-items: center;
  justify-content: center;
}

.weather-container {
  top: 70px;
  height: 30px;
}

.attractions {
  top: 107px;
}

.user-location-btn {
  top: 245px;
  width: 50px;
  height: 40px;
}

.night-mode {
  top: 155px;
}

.news-top-bar-btn {
  top: 200px;
}
/* ------- END ------- */

/* Alert Messages */
.alert-cold,
.alert-rain {
  display: none;
  flex-direction: column;
  position: absolute;
  right: 20px;
  border-radius: 20px;
  text-align: center;
  align-items: center;
  justify-content: center;
  top: 70px;
  z-index: 1;
}

.alert-successful,
.alert-unsuccessful {
  display: flex;
  flex-direction: column;
  position: absolute;
  right: 20px;
  border-radius: 20px;
  text-align: center;
  align-items: center;
  justify-content: center;
  top: 70px;
  z-index: 1;
}

/* Favourites Table */
#favourites-table {
  width: 100%;
}
/* 
#favourites-table td,
#favourites-table th {
  border: 1px solid #ddd;
  padding: 8px;
}

#favourites-table tr:nth-child(even) {
  background-color: #f2f2f2;
}

#favourites-table tr:hover {
  background-color: #ddd;
}

#favourites-table th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
  background-color: lightskyblue;
  color: white;
} */

/* Make favourites popup bigger when on a large screen (XL) */
@media (min-width: 768px) {
  .modal-xl {
    width: 90%;
    max-width: 1200px;
  }
}

/* No Journeys message */
#no-journeys-message {
  text-align: center;
  margin-top: 20px;
}

/* Make Favourite Journeys Table scrollable if too big */
.modal-body {
  max-height: calc(100vh - 210px);
  overflow-y: auto;
}

/* Loading icon stuff */
.ajax-loading {
  display: none;
  padding-top: 1rem;
}

/* Prediction div */
#display_prediction {
  border: 1px solid black;
}

/* Toggle to hide show the search menu */
/* ------- START ------- */
#mobile-close-btn {
  display: flex;
  position: relative;
  top: 40px;
  right: -330px;
  width: 15px;
  background-color: white;
  justify-content: right;
  border-radius: 8px;
  margin: 0px;
  /* top right bottom left*/
  padding: 10px 20px 10px 10px;
  cursor: pointer;
}

#hide-arrow {
  transform: rotate(180deg);
}

#mobile-close-btn:hover {
  box-shadow: 8px 5px 5px 0 rgba(0, 0, 0, 0.2);
}

#mobile-close-btn:hover,
#hide-arrow:hover {
  color: lightblue;
}

/* Hide toggle for mobile */
@media (max-width: 850px) {
  #mobile-close-btn {
    display:none;
  }
}
/* ------- END ------- */

.move-left {
  transition: 1s;
}

.move-right {
  transition: 1s;
}

#fare-table {
  margin-top: 10px;
}

/* ---  news top bar  --- */

.news-top-bar {
  background-color: rgb(265, 265, 265, 0.9);
  display:flex;
  top: 70px;
  border-radius: 25px;
  position: absolute;
  width: auto;
  height: 30px;
  padding-left: 8px;
  right: 200px;
  left: 450px;

}

#news-top-bar-content {
  text-align: center;
  padding-top: 3px;
  margin-left: 6px;
  margin-right: 6px;
  width: inherit;
  overflow: hidden;
  font-weight: 500;
}

#news-top-bar-content a,
#news-top-bar-content p {
  margin: 0;
  padding: 0;
}

#news-top-bar-content a {
  text-decoration: none;
}

/* Styles for mobile (news top bar) */
@media (max-width: 850px) {
.news-top-bar {
  background-color: rgb(265, 265, 265, 0.9);
  display:flex;
  top: 70px;
  border-radius: 25px;
  position: absolute;
  width: auto;
  height: 30px;
  padding-left: 8px;
  right: 150px; 
  left:30px;
}

}

